# AlphaMemo

./: README.md  pyproject.toml
alphabet/: __init__.py
alphamemo/: __init__.py  __main__.py
