[project]
name = "alphabet"
version = "0.1.0"
description = "Script to help you learn the positions of each characters in the alphabet"
authors = [
    { name = "Havsalt", email = "knutolaihelgesen@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
"main" = "alphabet:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["alphabet"]
