[project]
name = "alphabet"
version = "0.1.0"
description = "Script to help you memorize the position of each letter in the alphabet"
authors = [
    { name = "Havsalt", email = "knutolaihelgesen@gmail.com" }
]
dependencies = [
    "keyboard~=0.13.5",
    "actus~=0.7.0",
    "colex~=0.2.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
"main" = "alphamemo:main"

[tool.poe.tasks]
m = "python -m alphamemo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["alphamemo"]
